--- a/styles/midsection.module.css
+++ b/styles/midsection.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 .container{
     height:600px;
 }
@@ -10,12 +11,12 @@
     text-align:center;
     font-weight:300;
     font-size:30px;
-    font-family: cursive;
+    font-family: 'Roboto Slab', serif;
 }
 .welcomeh1text{
     text-align:center;
     color:white;
-    font-family: cursive;
+    font-family: 'Roboto Slab', serif;
     margin-top:-20px;
     margin-bottom:-30px;
     font-size:40px;
@@ -27,7 +28,7 @@
     font-size:15px;
     font-weight: 100;
     letter-spacing: 10px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Roboto Slab', serif;
     
 }
 .line{
@@ -44,12 +45,12 @@
 .introductionh1text{
     color:white;
     text-align: center;
-    font-family:cursive;
+    font-family: 'Roboto Slab', serif;
 }
 .introductionh2text{
     color:white;
     font-size:15px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Roboto Slab', serif;
     padding-left:35px;
     padding-right:20px;
     font-weight:300;
@@ -66,7 +67,7 @@
     width:150px;
     border-radius:6px;
     color:white;
-    font-family: cursive;
+    font-family: 'Roboto Slab', serif;
     font-size:13px;
     background-color:rgb(219, 22, 22);
     border-color:rgb(219, 22, 22);
@@ -77,7 +78,5 @@
     height:calc(40px + 5%);
     font-size:calc(13px + 2.5%);
     transition-duration: 150ms;
-}
-.buttontext{
 }
 
